--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   href="https://fonts.googleapis.com/css?family=Arial">
     <title>Naz</title>
   </head>
-  <body>
+  <body className="h-10 scrollbar">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
