--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/logo/nazlogo.JPG" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet"
   href="https://fonts.googleapis.com/css?family=Arial">
-    <title>Naz</title>
+    <title>Naz Portfolio</title>
   </head>
   <body className="h-10 scrollbar">
     <div id="root"></div>
